# ecosystem-degov

./: .gitignore  ANALISE_COMPLETA_PROJETO.md  CONSOLIDATION_STATUS.md  CONTRIBUTING.md  CORRECAO_MIGRACAO.md  Cargo.toml  DESENVOLVIMENTO.md  DIFFERENCES_ANALYSIS.md  EAP.md  ECOSYSTEM_DEGOV_ARCHITECTURE_DIAGRAMS.md  ECOSYSTEM_DEGOV_WHITEPAPER.md  ECOSYSTEM_DESCRIPTION.md  ECOSYSTEM_MAP.md  ENTERPRISE_ORGANIZATION_STATUS.md  EXECUCAO_IMEDIATA_TRINITY.md  GST_UPDATE.md  LICENSE  NEXT_SESSION_GUIDE.md  PROJECT_STATUS_12_10_2025.md  README.md  REORGANIZATION_REPORT.json  REPOSITORY_DESCRIPTION.md  ROADMAP_EXECUCAO.md  ROOT_ORGANIZATION_FINAL_REPORT.md  SESSION.md  TASKMASH_TRINITY_ARCHITECTURE.md  TASKMAS_SUPERESCOPO.md  TASK_LIST_DETALHADA.md  TRINITY_AI_AGENT_SUMMARY.md  TRINITY_ARCHITECTURE_STATUS.md  aet-deployment-info.json  ect-ccr-deployment-info.json  env.example  hardhat-trinity.config.js  hardhat.config.js  organize_root.py  package-lock.json  package.json  test_backend.ps1  test_curl.bat  (+4 more)
.github/workflows/: ci.yml
artifacts/contracts/TrinityESGContract.sol/: TrinityESGContract.dbg.json  TrinityESGContract.json
cache/: console-history.txt  solidity-files-cache.json
config/: Cargo.toml  GOERLI_FAUCETS.md  INFURA_SETUP.md  PRIVATE_KEY_GUIDE.md  env.goerli.example  goerli-example.env  goerli-quick.env  goerli-setup.md  goerli.env  goerli.env.example  trinity_mcp_config.yaml
contracts/: TOKEN_ECOSYSTEM_ARCHITECTURE.md  TrinityESGContract.sol
contracts/interfaces/: IAETToken.sol  ISimpleGST.sol
contracts/tokens/: CCRToken.sol  ECRToken.sol  ECSToken.sol  ECTToken.sol  ESTToken.sol  IESToken.sol  NFENFT.sol  SimpleAETToken.sol  SimpleGSTToken.sol
contracts/trinity/: TrinityGSTToken.sol
deployments/local/: simple-deployment-info.json
docker/: Dockerfile.backend  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BLOCKCHAIN_DICTIONARY.md  DEPLOYMENT_INFO.md  DEPLOY_GUIDE_GOERLI.md  DEVELOPMENT_GUIDE.md  ECOSYSTEM_OVERVIEW.md  EXECUTIVE_SUMMARY.md  FAUCETS_GOERLI.md  FINAL_SUMMARY.md  GOERLI_DEPLOY_GUIDE.md  INVESTOR_PITCH_VISUALS.md  LOCAL_TEST_RESULTS.md  NEURAL_NETWORK_ARCHITECTURE.md  NEURAL_NETWORK_EXECUTIVE_SUMMARY.md  NEURAL_NETWORK_GUIDE.md  README.md  STATUS_FINAL.md  TECHNICAL_SPECIFICATION.md  TRINITY_AI_AGENT_IMPLEMENTATION_SUMMARY.md  TRINITY_AI_AGENT_SUCCESS.md  TRINITY_AI_ANALYSIS_NFE.md  TRINITY_NEURAL_NETWORK.md  TRINITY_STRATEGIC_PLAN.md
docs/ai/: ETHICAL_AI_ECOSYSTEM.md
docs/architecture/: DIRECTORY_STRUCTURE_ANALYSIS.md  EAP.md  EAP_DASHBOARD.md  EAP_ESG_TOKEN_ECOSYSTEM.md  TRINITY_DEGOV_FLOW_DIAGRAM.md
docs/best-practices/: IMPLEMENTED_BEST_PRACTICES.md
docs/developer/: FINAL_DIRECTORY_REORGANIZATION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  NEXT_SESSION_GUIDE.md  PRE_COMMIT_VERIFICATION_REPORT.md  SESSION.md  TOKEN_SUPPLY_ANALYSIS.md
docs/development/: CONSOLIDATION_PLAN.md  DESENVOLVIMENTO.md  MIGRATION_STATUS.md  create_docs.py
docs/ecosystem/: ECOSYSTEM_MAPPING.md
docs/integration/: BUSINESS_INTEGRATION_PLAN.md  GUARDFLOW_CONNECTION.md  GUARDFLOW_INTEGRATION.md
docs/investor/: EXECUTIVE_SUMMARY.md  INVESTOR_Q&A_COMPLETE.md
docs/roadmap/: DETAILED_ROADMAP.md
docs/security/: SECURITY_AUDIT_REPORT.md  Symbiotic_Audit_Report.md
docs/technical/: GST_AET_Trinity_Analysis.md  IMPLEMENTATION_GUIDE.md
docs/technical-specs/: README_SMART_CONTRACTS.md  TECHNICAL_SPECIFICATIONS.md
docs/whitepaper/: EAP_EXECUTIVE_SUMMARY.md  ECOSYSTEM_DEGOV_EXECUTIVE_SUMMARY.md  ECOSYSTEM_DEGOV_WHITEPAPER.md  ESG_TOKEN_WHITEPAPER.md
docsync/: ADAPTIVE_DOCSYNC_FINAL_SUMMARY.md  ADAPTIVE_DOCSYNC_IMPLEMENTATION_SUMMARY.md  ADAPTIVE_DOCSYNC_README.md  ROOT_FILES_ORGANIZATION_REPORT.md  adaptive_docsync.py  adaptive_docsync_report.json  adaptive_structure.py  esg-token-docsync-simple.yaml  esg-token-docsync.yaml  esg-token-docsync.yaml.example
docsync/docs/api/: API_DOCUMENTATION.md
docsync/docs/architecture/: ENTERPRISE_ARCHITECTURE.md
docsync/docs/development/: INSTALLATION_GUIDE.md  README.metadata.metadata.json  auto_organization.py  continuous_learning.py  enterprise_structure_manager.py  esg-token-adaptive-docsync.yaml  organize_root_files.py  run_adaptive_docsync.ps1
docsync/docs/esg/: esg-token-project.md  esg-token-project.metadata.metadata.json
docsync/docs/general/: README.md  (+4 more)
enterprise/governance/: ENTERPRISE_GOVERNANCE.md
migration_from_guardflow/: EAP_GUARDFLOW.md  MIGRATION_LOG.md
problematic/: AETToken.sol  CCRToken.sol  EGMToken.sol  ESTToken.sol
problematic_tokens_backup/: ECSToken.sol
scripts/: deploy-aet.js  deploy-ect-ccr.js  deploy-goerli-optimized.js  deploy-goerli-simple.js  deploy-goerli-trinity.js  deploy-goerli.js  deploy-local.js  deploy-minimal.js  deploy-nfe-nft.js  deploy-simple-only.js  deploy-simple-test.js  deploy-trinity-contract.js  deploy-trinity-final.js  deploy-trinity-only.js  deploy-trinity-simple.js  deploy-v6.js  deploy.js  deploy_trinity_ai_agent.sh  simple-deploy.js  start_trinity_ai_agent.rs  test.js  test_neural_network.rs  test_neural_simple.rs  test_trinity_ai_agent.sh  transfer-aet.js  verify.js
scripts/maintenance/: reorganize_directory_structure.py
src/: main.rs  main_trinity_ai_agent.rs  models.rs  trinity_ai_agent.rs  trinity_mcp_server.rs  trinity_neural_network.rs  trinity_system_consciousness.rs
src/ai/: computer_vision.rs  insights.rs  mod.rs  models.rs  nlp.rs  predictions.rs  recommendations.rs  trinity_ai_agent.rs
src/blockchain/: mod.rs
src/database/: mod.rs
src/ecotoken/: ccr.rs  ecr.rs  ecs.rs  ect.rs  egm.rs  est.rs  mod.rs
src/esg/: mod.rs
src/gst/: gamification.rs  governance.rs  marketplace.rs  mod.rs  nfe_converter.rs  smart_cart.rs  token.rs
src/guardrive/: cross_platform.rs  mod.rs  telemetry.rs  vehicle.rs
src/mcp/: mod.rs  trinity_mcp_server.rs
src/mobility/: bridge.rs  integration.rs  mod.rs  telemetry.rs  vehicle.rs
src/services/: mod.rs
tests/: test_backend.ps1
tests/integration/: test_ecotoken_ecosystem.bat  test_gst_endpoints.bat  test_mobility_integration.bat
tests/unit/: test_simple.bat  test_simple.ps1
(+33 files in other folders)
