[package]
name = "trinity-ai-agent"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "trinity_ai_agent"
path = "src/main_trinity_ai_agent.rs"

[[bin]]
name = "esg_token_backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and Time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"

# Trinity AI Agent Dependencies
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Cryptography
ring = "0.17"
base64 = "0.21"

# Configuration
config = "0.14"
toml = "0.8"

# Random number generation
rand = "0.8"

# Async utilities
futures = "0.3"

# Async file I/O
tokio-util = "0.7"

# Metrics and monitoring
prometheus = "0.13"

# Environment variables
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
